--- a/ITMO.ASP/ITMO.ASP.ControlTask/ITMO.ASP.ControlTask.csproj
+++ b/ITMO.ASP/ITMO.ASP.ControlTask/ITMO.ASP.ControlTask.csproj
@@ -75,8 +75,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AddStudent.aspx" />
-    <Content Include="App_Data\Students.mdf" />
-    <Content Include="App_Data\Students_log.ldf" />
+    <Content Include="App_Data\StudentsBD.mdf" />
+    <Content Include="App_Data\StudentsBD_log.ldf" />
     <Content Include="Rating.aspx" />
     <Content Include="Scores.aspx" />
     <Content Include="Style.css" />
