--- a/ITMO.CSharp.WindowsForms/Calc_Starter/WindowsCalculator.csproj
+++ b/ITMO.CSharp.WindowsForms/Calc_Starter/WindowsCalculator.csproj
@@ -18,7 +18,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>SimpleCalculator</RootNamespace>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-    <StartupObject>SimpleCalculator.CalculatorUI</StartupObject>
+    <StartupObject>SimpleCalculator.CalcUI</StartupObject>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
@@ -94,11 +94,20 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CalculatorUI.cs">
+    <Compile Include="CalcUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <EmbeddedResource Include="CalculatorUI.resx">
-      <DependentUpon>CalculatorUI.cs</DependentUpon>
+    <Compile Include="QuadEquation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuadEquation.Designer.cs">
+      <DependentUpon>QuadEquation.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="CalcUI.resx">
+      <DependentUpon>CalcUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuadEquation.resx">
+      <DependentUpon>QuadEquation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
